tests/snapshots/analysis__analyze_arity_too_few.snap
---
source: tests/analysis.rs
expression: result.unwrap_err()
---
Error: Type mismatch: expected 2 argument(s), got 1 argument(s)
Error: Unresolved identifier 'x'
