tests/snapshots/analysis__analyze_arity_too_many.snap
---
source: tests/analysis.rs
expression: result.unwrap_err()
---
Error: Type mismatch: expected 2 argument(s), got 3 argument(s)
Error: Unresolved identifier 'x'
