tests/snapshots/analysis__analyze_multiple_errors.snap
---
source: tests/analysis.rs
expression: result.unwrap_err()
---
 [97m● [1merror[Analysis]: Type mismatch: expected 2 argument(s), got 1 argument(s)[0m
 ├ src/compiler/error.rs:212
 ├ test.vt:6:13-18
 ╰ help: Ensure the types match or add an explicit conversion
━━
 [97m● [1merror[Analysis]: Type mismatch: expected 2 argument(s), got 3 argument(s)[0m
 ├ src/compiler/error.rs:212
 ├ test.vt:7:13-24
 ╰ help: Ensure the types match or add an explicit conversion
━━
 [97m● [1merror[Analysis]: Invalid cast: cannot cast type Primitive(I32) into Primitive(Bool)[0m
 ├ src/compiler/error.rs:212
 ├ test.vt:8:19-28
 ╰ help: This construct is not valid in the current context
━━
 [97m● [1merror[Analysis]: Unresolved identifier 'x'[0m
 ├ src/compiler/error.rs:212
 ├ test.vt:9:12-12
 ╰ help: This identifier or symbol was not found in the current scope
