tests/snapshots/analysis__analyze_pointer_types.snap
---
source: tests/analysis.rs
expression: output
---
Root{defs:[Def{kind:Function{name:"test",params:[Param{name:"x",type:Primitive{type:"I32"}}],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Pointer{to:Primitive{type:"I32"}},kind:LetBinding{name:"p",type_annotation:unresolved,value:Expr{type:Pointer{to:Primitive{type:"I32"}},kind:UnaryOp{op:"AddressOf",expr:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"x"}}}}}},Expr{type:Primitive{type:"I32"},kind:LetBinding{name:"val",type_annotation:unresolved,value:Expr{type:Primitive{type:"I32"},kind:UnaryOp{op:"Deref",expr:Expr{type:Pointer{to:Primitive{type:"I32"}},kind:Identifier{name:"p"}}}}}},Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"val"}}}}]}},return_type:Primitive{type:"I32"}}}]}
