tests/snapshots/analysis__analyze_simple_arithmetic.snap
---
source: tests/analysis.rs
expression: output
---
Root{defs:[Def{kind:Function{name:"add",params:[Param{name:"a",type:Primitive{type:"I32"}},Param{name:"b",type:Primitive{type:"I32"}}],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:BinOp{op:"Add",left:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"a"}},right:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"b"}}}}}}]}},return_type:Primitive{type:"I32"}}},Def{kind:Function{name:"multiply",params:[Param{name:"x",type:Primitive{type:"I32"}},Param{name:"y",type:Primitive{type:"I32"}}],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:BinOp{op:"Mul",left:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"x"}},right:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"y"}}}}}}]}},return_type:Primitive{type:"I32"}}}]}
