tests/snapshots/analysis__analyze_type_inference.snap
---
source: tests/analysis.rs
expression: output
---
Root{defs:[Def{kind:Function{name:"test",params:[],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Primitive{type:"I32"},kind:LetBinding{name:"x",type_annotation:unresolved,value:Expr{type:Primitive{type:"I32"},kind:Literal{value:Int(10)}}}},Expr{type:Primitive{type:"I32"},kind:LetBinding{name:"y",type_annotation:unresolved,value:Expr{type:Primitive{type:"I32"},kind:Literal{value:Int(20)}}}},Expr{type:Primitive{type:"I32"},kind:LetBinding{name:"z",type_annotation:unresolved,value:Expr{type:Primitive{type:"I32"},kind:BinOp{op:"Add",left:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"x"}},right:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"y"}}}}}},Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"z"}}}}]}},return_type:Primitive{type:"I32"}}}]}
