tests/snapshots/analysis__analyze_unary_ops.snap
---
source: tests/analysis.rs
expression: output
---
Root{defs:[Def{kind:Function{name:"negation",params:[Param{name:"x",type:Primitive{type:"I32"}}],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:UnaryOp{op:"Neg",expr:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"x"}}}}}}]}},return_type:Primitive{type:"I32"}}}]}
